Update .env (Mongodb)

--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@ JWT_SECRET = "greatstack"
 ADMIN_EMAIL = "admin@example.com"
 ADMIN_PASSWORD = "greatstackl123"
 
-MONGODB_URI = "mongodb+srv://pranjalchoubey44:RRxmWKetKtQbiH54@fullstack.nbee8.mongodb.net/?retryWrites=true&w=majority&appName=Fullstack"
+MONGODB_URI = "mongodb+srv://Anmol:AnmolKurti@kurti.9opxe.mongodb.net/"
 
 CLOUDINARY_API_KEY = "414924816926563"
 CLOUDINARY_SECRET_KEY = "BgazccsY2JEEvvvYJ8nX60vqCAU"
